# DOBOT_6Axis_ROS2_V4

./: .gitignore  FORK_NOTES.md  LICENSE  README.md  README_EN.md  README_ZH.md  TRAJECTORY_EXECUTION.md  gazebo_cr12_log
V4新增指令/: README.md  新增指令点位可达性检测.md
cr10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr10_moveit/config/: cr10_robot.ros2_control.xacro  cr10_robot.srdf  cr10_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
cr10_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr10af_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr10af_moveit/config/: cr10af_robot.ros2_control.xacro  cr10af_robot.srdf  cr10af_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cr10af_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr12_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr12_moveit/config/: cr12_robot.ros2_control.xacro  cr12_robot.srdf  cr12_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cr12_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr16_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr16_moveit/config/: cr16_robot.ros2_control.xacro  cr16_robot.srdf  cr16_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cr16_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr20_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr20_moveit/config/: cr20_robot.ros2_control.xacro  cr20_robot.srdf  cr20_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cr20_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
cr30h_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr3_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr7_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cr_description/: CMakeLists.txt  package.xml
cr_description/config/: gazebo_controllers.yaml
cr_description/urdf/: cr10_robot.xacro  cr12_robot.xacro  cr16_robot.xacro  cr3_robot.xacro  cr5_robot.xacro  cr7_robot.xacro  me6_robot.xacro  nova2_robot.xacro  nova5_robot.xacro
cra_description/: CMakeLists.txt  package.xml
cra_description/meshes/cr10af/: J3.STL  J6.STL
cra_description/meshes/cr20/: Link1.STL  Link3.STL  Link4.STL  Link6.STL
cra_description/meshes/cr3/: J1.STL  J2.STL  J3.STL  J4.STL  J5.STL  J6.STL
cra_description/meshes/cr30h/: Link1.STL  base_link.STL
cra_description/meshes/cr5/: J1.STL  J4.STL  J5.STL  J6.STL  Link2.dae  base_link.STL
cra_description/meshes/nova5/: Link1.STL  Link2.STL  Link3.STL  Link5.STL  base_link.STL
cra_description/urdf/: cr10_robot.xacro  cr10af_robot.xacro  cr12_robot.xacro  cr16_robot.xacro  cr20_robot.xacro  cr30h_robot.xacro  cr3_robot.xacro  cr5_robot.xacro  cr7_robot.xacro  me6_robot.xacro  nova2_robot.xacro  nova5_robot.xacro
dobot_bringup_v4/: CMakeLists.txt  package.xml
dobot_bringup_v4/config/: param.json
dobot_bringup_v4/include/dobot_bringup/: command.h  cr_robot_ros2.h  parseTool.h  tcp_socket.h  trajectory_executor.h
dobot_bringup_v4/launch/: dobot_bringup_ros2.launch.py
dobot_bringup_v4/src/: command.cpp  cr_robot_ros2.cpp  main.cpp  parseTool.cpp  tcp_socket.cpp  trajectory_executor.cpp
dobot_bringup_v4/test/: test_trajectory_executor.cpp
dobot_demo/: package.xml  setup.cfg  setup.py
dobot_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
dobot_gazebo/config/: moveitcpp.rviz
dobot_gazebo/launch/: dobot_gazebo.launch.py  gazebo_moveit.launch.py  sim.launch.py
dobot_gazebo/worlds/: cr.world  neighborhood.world  ur10.world
dobot_moveit/: package.xml  setup.cfg  setup.py
dobot_msgs_v4/: CMakeLists.txt  package.xml
dobot_msgs_v4/msg/: RobotStatus.msg
dobot_msgs_v4/srv/: Arc.srv  BrakeControl.srv  CheckOddMovC.srv  CheckOddMovL.srv  Circle.srv  DIGroup.srv  DIGroupDEC.srv  DOGroupDEC.srv  EnableFTSensor.srv  FCCollisionSwitch.srv  FCForceMode.srv  FCOff.srv  FCSetDeviation.srv  FCSetForceLimit.srv  ForceDriveMode.srv  ForceDriveSpeed.srv  GetAO.srv  GetCoils.srv  GetCurrentCommandId.srv  GetDOGroup.srv  GetError.srv  GetForce.srv  GetHoldRegs.srv  GetInRegs.srv  GetOutputInt.srv  GetPose.srv  GetStartPose.srv  InverseKin.srv  ModbusCreate.srv  ModbusRTUCreate.srv  MovJ.srv  MovLIO.srv  MoveJog.srv  PositiveKin.srv  RelJointMovJ.srv  RunTo.srv  SetCoils.srv  SetFCCollision.srv  SetHoldRegs.srv  StartPath.srv
dobot_rviz/: CMakeLists.txt  package.xml
me6_moveit/: .setup_assistant  CMakeLists.txt  package.xml
misc/: FK.py  TF.py
nova2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
nova5_moveit/: .setup_assistant  CMakeLists.txt  package.xml
servo_action/: package.xml  setup.cfg  setup.py
(+177 files in other folders)
