<?xml version="1.0"?>
<package>
  <name>cra_description</name>
  <version>0.0.0</version>
  <description>The cra_description package</description>

  <maintainer email="futingxing@dobot-robot.com">TX_F</maintainer>

  <license>BSD</license>

  <author email="futingxing@dobot-robot.com">TX_F</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
